Implemented a search view to look up routes.

--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -39,6 +39,8 @@
     <string name="page_nearest_route_stops">Favourite Routes</string>
     <string name="you_are_here">You Are Here</string>
     <string name="show_my_location">Show My Location</string>
+    <string name="menu_search">Search</string>
+    <string name="search_query_hint_bus_number">Route Number</string>
 
 
 </resources>
